List Cargo view implemented
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@81 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
+++ b/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
@@ -23,7 +23,8 @@
                 <ul id="menu">              
                     <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
                     <li><%= Html.ActionLink("About Us", "About", "Home")%></li>
-                    <li><%= Html.ActionLink("Route Tracking", "Index", "CargoTracking")%></li>                                       
+                    <li><%= Html.ActionLink("Route Tracking", "Index", "CargoTracking")%></li>
+                    <li><%= Html.ActionLink("All cargos", "List", "CargoAdmin")%></li>                                       
                 </ul>
             
             </div>
