--- a/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
+++ b/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
@@ -8,7 +8,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title><%= Html.Encode(ViewData["Title"]) %></title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/style.css" rel="stylesheet" type="text/css" />    
+    <link href="../../Content/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/calendar.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
