Registration Form View Implemented
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@85 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
+++ b/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
@@ -26,6 +26,7 @@
                     <li><%= Html.ActionLink("About Us", "About", "Home")%></li>
                     <li><%= Html.ActionLink("Route Tracking", "Index", "CargoTracking")%></li>
                     <li><%= Html.ActionLink("All cargos", "List", "CargoAdmin")%></li>                                       
+                    <li><%= Html.ActionLink("Register New Cargo", "RegistrationForm", "CargoAdmin")%></li>                                       
                 </ul>
             
             </div>
