Remove RoutingServiceTemporaryImpl and replaced with real RoutingService implemented within NDDDSample.Interfaces.PathfinderRemoteService.Host
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@88 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
+++ b/src/app/presentation/NDDDSample.Web/Views/Shared/Site.Master
@@ -31,13 +31,13 @@
                 </ul>            
             </div>
         </div>
-        <div id="main" style="height:400px; margin-bottom:0px; padding-bottom:0px">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server" /> 
-                     
+        <div id="main" style="min-height:99%; margin-bottom:0px; padding-bottom:0px">
+            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+            <div id="footer" style="vertical-align: bottom; margin-top: 0px; padding-top: 0px">
+                NDDDSample Application &copy; Copyright 2009
+            </div>         
         </div>
-        <div id="footer" style="vertical-align: bottom; margin-top: 0px; padding-top: 0px">
-            NDDDSample Application &copy; Copyright 2009
-        </div>
+       
     </div>
 </body>
 </html>
