--- a/src/RegisterApp/NDDDSample.RegisterApp/Views/RegisterApp.xaml
+++ b/src/RegisterApp/NDDDSample.RegisterApp/Views/RegisterApp.xaml
@@ -2,20 +2,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ViewModels="clr-namespace:NDDDSample.RegisterApp.ViewModels"
-    xmlns:Commands="clr-namespace:NDDDSample.RegisterApp.Commands"
-    Title="Incident Logging Application" Height="300" Width="350" Background="LightGray" HorizontalAlignment="Center" ResizeMode="NoResize">
+    xmlns:Commands="clr-namespace:NDDDSample.RegisterApp.Commands"    
+    Title="Incident Logging Application" Height="270" Width="350" Background="LightGray" HorizontalAlignment="Center" ResizeMode="NoResize" VerticalAlignment="Center">
     <Grid>
         <StackPanel Orientation="Vertical" Width="300" VerticalAlignment="Center"> 
             <GroupBox Header="Completion" Name="groupBoxCompletion" >
                 <Grid>
                     <Grid.ColumnDefinitions> 
                         <ColumnDefinition/>                        
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="120"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Name="lblTime" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0">Time</Label>
+                    <Label Name="lblTime" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0">Time (yyyy-MM-dd HH:mm):</Label>
                     <TextBox Name="tbCompletionTime" Grid.Column="1" Grid.Row="0" >
                         <TextBox.Text>
                             <Binding Path="CompletionTime" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">
@@ -28,12 +28,12 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition Width="120"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Name="lblTrackingId" HorizontalAlignment="Right"  Grid.Column="0" Grid.Row="0">Tracking Id</Label>
+                    <Label Name="lblTrackingId" HorizontalAlignment="Right"  Grid.Column="0" Grid.Row="0">Tracking Id:</Label>
                     <TextBox Name="tbTrackingId" Grid.Column="1" Grid.Row="0">
                         <TextBox.Text>
                             <Binding Path="TrackingId" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">                                
@@ -46,28 +46,28 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition Width="120"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Name="lblVoyage" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0">Voyage</Label>
+                    <Label Name="lblVoyage" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0">Voyage:</Label>
                     <TextBox Name="tbVoyage" Grid.Column="1" Grid.Row="0" >
                         <TextBox.Text>
                             <Binding Path="Voyage" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">                                
                             </Binding>
                         </TextBox.Text>
                     </TextBox>
-                    <Label Name="lblLocation" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1">Location UN/LO code</Label>
+                    <Label Name="lblLocation" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1">Location UN/LO code:</Label>
                     <TextBox Name="tbLocation" Grid.Column="1" Grid.Row="1" >
                         <TextBox.Text>
                             <Binding Path="Location" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">                                
                             </Binding>
                         </TextBox.Text>
                     </TextBox>
-                    <Label Name="lblEventType" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="2">Event Type</Label>
+                    <Label Name="lblEventType" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="2">Event Type:</Label>
                     <ComboBox Name="cmbEventType" Grid.Column="1" Grid.Row="2"
                             ItemsSource="{Binding HandlingTypeList, UpdateSourceTrigger=PropertyChanged}" 
                             SelectedValuePath="Key" 
