Composite command pattern implemented
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@102 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/RegisterApp/NDDDSample.RegisterApp/Views/RegisterApp.xaml
+++ b/src/RegisterApp/NDDDSample.RegisterApp/Views/RegisterApp.xaml
@@ -79,7 +79,7 @@
                     </ComboBox>
                 </Grid>
             </GroupBox>            
-            <Button Name="btnRegister" Width="100" HorizontalAlignment="Right" Command="{x:Static Commands:HandlingReportCommands.RegisterHandlingReport}">Register</Button>
+            <Button Name="btnRegister" Width="100" HorizontalAlignment="Right" Command="{x:Static Commands:HandlingReportCommands.RegisterHandlingReportCommand}">Register</Button>
         </StackPanel>
     </Grid>
 </Window>
